k8s/sleepr/templates/auth-service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth-tcp
spec:
  ports:
    # - name: 'http'
    #   port: 3002
    #   protocol: TCP
    #   targetPort: 3002
    - name: 'tcp'
      port: 3003
      protocol: TCP
      targetPort: 3003
  selector:
    app: auth
  type: ClusterIP
