k8s/sleepr/templates/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payments
  name: payments
spec:
  ports:
    - name: 'http'
      port: 3001
      protocol: TCP
      targetPort: 3001
    - name: 'tcp'
      port: 3004
      protocol: TCP
      targetPort: 3004
  selector:
    app: payments
  type: ClusterIP
