k8s/sleepr/templates/reservations-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reservations
  name: reservations
spec:
  ports:
    - name: 'http'
      port: 3005
      protocol: TCP
      targetPort: 3005
  selector:
    app: reservations
  type: NodePort
